# pgAdmin3

./: .gitignore  CHANGELOG  DEVELOPERS  INSTALL.md  LICENSE  Makefile.in  README  README.md  TODO  configure  configure.ac  configure.ac.in  pgAdmin3.props  pgAdmin3.sln  pgAdmin3.targets  pgAdmin3.xml
branding/: Makefile.in  branding.ini
docs/: Docs.vcxproj  Docs.vcxproj.filters  builddocs.bat
docs/en_US/: conf.py  debugger.rst  pgagent-install.rst  pgagent-jobs.rst  pgagent-schedules.rst  pgagent-steps.rst  reports.rst
i18n/: Makefile.in
i18n/cs_CZ/: pgadmin3.po
i18n/de_DE/: pgadmin3.po
pgadmin/: Makefile.in  pgAdmin3.vcxproj  ver_svn.bat
pgadmin/ctl/: ctlDefaultSecurityPanel.cpp  ctlMenuToolbar.cpp  ctlSQLGrid.cpp  ctlSeclabelPanel.cpp  ctlSecurityPanel.cpp
pgadmin/db/: pgSet.cpp
pgadmin/debugger/: frmDebugger.cpp
pgadmin/dlg/: dlgAggregate.cpp  dlgRole.cpp  dlgSearchObject.cpp
pgadmin/frm/: events.cpp  (+7 more)
pkg/: Makefile.am  Makefile.in  pgadmin3.desktop.in
pkg/debian/: Makefile.in
pkg/mac/: Makefile.in  debug.pgadmin.Info.plist  licence.r  pgadmin.Info.plist
pkg/mandrake/: Makefile.in  pgadmin3.spec
pkg/redhat/: Makefile.in  pgadmin3.spec  pgadmin3.spec.in
pkg/slackware/: Makefile.in  build-release
pkg/src/: Makefile.in  build-tarball
pkg/suse/: Makefile.am  Makefile.in  pgadmin3.spec
pkg/win32/: Installer.vcxproj  Installer.vcxproj.filters  Make.bat  Makefile.in  README.txt  upgrade.bat
pkg/win32/src/: i18ndata.wxs  i18nrefs.wxs  pgadmin3.wxs
pkg/win32/utils/: RegenGuids.pl
plugins.d/: Makefile.in
xtra/: Makefile.in
(+175 files in other folders)
