##############################################################################
# pgAdmin III - PostgreSQL Tools
# 
# Copyright (C) 2002 - 2016, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

SUBDIRS = debian mac mandrake redhat slackware src suse win32

EXTRA_DIST = \
		$(srcdir)/pgadmin3.desktop

desktopdir = /usr/share/applications
desktop_DATA = ./@PACKAGE@.desktop

confdir = $(sysconfdir)/@PACKAGE@
conf_DATA = ../pgadmin/include/images/pgAdmin3.png

